src/vm/snapshots/hebi__vm__tests__global_builtin_functions__to_int__float.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
to_int(10.5)


# Result:
Int(
    10,
)
